test/errors/redeclare_variable.correct
error: redeclare_variable.li:2:5: 'x' is already defined
│ let x = 2;
│ ~~~~~~~~~
│     ^
